--- a/src/app/components/navigation/navigationBar.html
+++ b/src/app/components/navigation/navigationBar.html
@@ -72,13 +72,13 @@
            translate>User details</a>
         <a id="navigation_interoperability_platform_link"
            class="dropdown-item"
-           ng-href="https://yhteentoimiva.suomi.fi/">yhteentoimiva.suomi.fi</a>
+           ng-href="https://yhteentoimiva.suomi.fi/" target="_blank">yhteentoimiva.suomi.fi</a>
         <a id="navigation_controlled_vocabularies_link"
            class="dropdown-item"
-           ng-href="https://sanastot.suomi.fi/" translate>Suomi.fi Controlled Vocabularies</a>
+           ng-href="{{ctrl.terminologyUrl}}" target="_blank" translate>Suomi.fi Controlled Vocabularies</a>
         <a id="navigation_reference_data_link"
            class="dropdown-item"
-           ng-href="https://koodistot.suomi.fi/" translate>Suomi.fi Reference Data</a>
+           ng-href="{{ctrl.codeListUrl}}" target="_blank" translate>Suomi.fi Reference Data</a>
         <a id="navigation_groupmanagement_link"
            class="dropdown-item"
            ng-if="ctrl.showGroupManagementLink()"
