YTI-1037 Add tool info text at the frontpage

--- a/src/app/components/frontPage.html
+++ b/src/app/components/frontPage.html
@@ -2,6 +2,8 @@
 
 <div ng-if="!$ctrl.loading">
 
+  <div><p translate>ToolInfo</p></div>
+
   <div class="row">
     <div class="col-md-4 mb-3">
       <div class="input-group input-group-lg input-group-search">
