--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -959,3 +959,7 @@ body.visualization-maximized {
   margin-top: -5px;
   margin-right: 10px;
 }
+
+// .tool-info {
+//   width: calc(100% - 200px);
+// }
