YTI-1040 Move "Add model" button to the same line with the tool info text

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -960,6 +960,6 @@ body.visualization-maximized {
   margin-right: 10px;
 }
 
-// .tool-info {
-//   width: calc(100% - 200px);
-// }
+.tool-info {
+  width: calc(100% - 200px);
+}
