--- a/src/app/components/frontPage.html
+++ b/src/app/components/frontPage.html
@@ -2,7 +2,18 @@
 
 <div ng-if="!$ctrl.loading">
 
-  <div><p translate>ToolInfo</p></div>
+  <div class="pull-right" id="add-new-datamodel" uib-dropdown ng-if="$ctrl.canAddModel()">
+    <button id="model_creation_button" class="btn btn-action" uib-dropdown-toggle>
+      <span translate>Add model</span>
+    </button>
+
+    <div uib-dropdown-menu class="dropdown-menu-right" aria-labelledby="model_creation_button">
+      <button id="add_library_button" class="dropdown-item" ng-click="$ctrl.addLibrary()" translate>Add library</button>
+      <button id="add_profile_button" class="dropdown-item" ng-click="$ctrl.addProfile()" translate>Add profile</button>
+    </div>
+  </div>
+
+  <div class="tool-info"><p translate>ToolInfo</p></div>
 
   <div class="row">
     <div class="col-md-6 mb-3">
@@ -49,18 +60,6 @@
                                class="pull-left ml-2"
                                [options]="$ctrl.modelTypes"
                                [filter-subject]="$ctrl.modelType$"></app-filter-dropdown>
-
-          <div class="pull-right" id="add-new-datamodel" uib-dropdown ng-if="$ctrl.canAddModel()">
-            <button id="model_creation_button" class="btn btn-action" uib-dropdown-toggle>
-              <span translate>Add model</span>
-            </button>
-
-            <div uib-dropdown-menu class="dropdown-menu-right" aria-labelledby="model_creation_button">
-              <button id="add_library_button" class="dropdown-item" ng-click="$ctrl.addLibrary()" translate>Add library</button>
-              <button id="add_profile_button" class="dropdown-item" ng-click="$ctrl.addProfile()" translate>Add profile</button>
-            </div>
-          </div>
-
         </div>
       </div>
 
