--- a/src/app/components/model/addEditNamespaceModal.html
+++ b/src/app/components/model/addEditNamespaceModal.html
@@ -1,51 +1,54 @@
-<form name="form" class="add-edit-namespace">
-  <modal-template>
-    <modal-title>{{$ctrl.titleLabel | translate}}</modal-title>
+<form name="form" class="add-edit-namespace" implicit-edit-mode>
 
-    <modal-body>
+  <div class="modal-header">
+    <h4 class="modal-title">
+      <a><i ng-click="$dismiss('cancel')" class="fas fa-times"></i></a>
+      {{$ctrl.titleLabel | translate}}
+    </h4>
+  </div>
 
-      <editable data-title="Namespace label" disable="!$ctrl.labelModifiable()" context="$ctrl.context">
-        <div class="input-group input-group-md">
-          <input id="label" type="text" class="form-control" autofocus required string-input="modelLabel" ng-model="$ctrl.label" />
-        </div>
-      </editable>
+  <div class="modal-body">
 
-      <editable data-title="Namespace" disable="!$ctrl.namespaceModifiable()" context="$ctrl.context">
-        <div class="input-group input-group-md">
-          <input id="namespace"
-                 type="text"
-                 class="form-control"
-                 required
-                 namespace-input
-                 active-namespace="$ctrl.namespaceToEdit"
-                 allow-technical="!$ctrl.edit"
-                 model="$ctrl.model"
-                 ng-model="$ctrl.namespace" />
-        </div>
-      </editable>
+    <editable data-title="Namespace label" disable="!$ctrl.labelModifiable()" context="$ctrl.context">
+      <div class="input-group input-group-md">
+        <input id="label" type="text" class="form-control" autofocus required string-input="modelLabel" ng-model="$ctrl.label" />
+      </div>
+    </editable>
 
-      <editable data-title="Prefix" disable="!$ctrl.prefixModifiable()" context="$ctrl.context">
-        <div class="input-group input-group-md">
-          <input id="prefix"
-                 type="text"
-                 class="form-control"
-                 required
-                 prefix-input
-                 active-namespace="$ctrl.namespaceToEdit"
-                 allow-technical="!$ctrl.edit"
-                 model="$ctrl.model"
-                 ng-model="$ctrl.prefix" />
-        </div>
-      </editable>
+    <editable data-title="Namespace" disable="!$ctrl.namespaceModifiable()" context="$ctrl.context">
+      <div class="input-group input-group-md">
+        <input id="namespace"
+               type="text"
+               class="form-control"
+               required
+               namespace-input
+               active-namespace="$ctrl.namespaceToEdit"
+               allow-technical="!$ctrl.edit"
+               model="$ctrl.model"
+               ng-model="$ctrl.namespace" />
+      </div>
+    </editable>
 
-    </modal-body>
+    <editable data-title="Prefix" disable="!$ctrl.prefixModifiable()" context="$ctrl.context">
+      <div class="input-group input-group-md">
+        <input id="prefix"
+               type="text"
+               class="form-control"
+               required
+               prefix-input
+               active-namespace="$ctrl.namespaceToEdit"
+               allow-technical="!$ctrl.edit"
+               model="$ctrl.model"
+               ng-model="$ctrl.prefix" />
+      </div>
+    </editable>
 
-    <modal-buttons>
+  </div>
 
-      <button class="btn btn-action confirm" type="button" ng-click="$ctrl.create()" ng-disabled="!form.$valid">{{$ctrl.confirmLabel | translate}}</button>
-      <button class="btn btn-link cancel" type="button" ng-click="$ctrl.cancel()" translate>Cancel</button>
-      <error-panel error="$ctrl.submitError"></error-panel>
+  <div class="modal-footer">
+    <button class="btn btn-action confirm" type="button" ng-click="$ctrl.create()" ng-disabled="!form.$valid">{{$ctrl.confirmLabel | translate}}</button>
+    <button class="btn btn-link cancel" type="button" ng-click="$ctrl.cancel()" translate>Cancel</button>
+    <error-panel error="$ctrl.submitError"></error-panel>
+  </div>
 
-    </modal-buttons>
-  </modal-template>
 </form>
