Enable implicit edit mode

--- a/src/app/components/model/editReferenceDataModal.html
+++ b/src/app/components/model/editReferenceDataModal.html
@@ -1,4 +1,4 @@
-<form name="editCodeSchemeForm">
+<form name="editCodeSchemeForm" implicit-edit-mode>
 
   <div class="modal-header">
     <h4 class="modal-title">
