Refactor / fix interactive help
Removes dependency to environment data other than classifications.

--- a/src/app/components/model/searchClassificationModal.html
+++ b/src/app/components/model/searchClassificationModal.html
@@ -14,7 +14,7 @@
           <div ng-repeat="classification in $ctrl.classifications"
                class="search-result"
                ng-click="$ctrl.select(classification)"
-               id="{{classification.id}}"
+               id="{{classification.id}}_search_result_link"
                key-control-selection>
 
             <div class="content" ng-class="{last: $last}">
