--- a/src/app/components/model/searchOrganizationModal.html
+++ b/src/app/components/model/searchOrganizationModal.html
@@ -13,7 +13,7 @@
         <div class="search-results">
           <div ng-repeat="organization in $ctrl.organizations"
                class="search-result"
-               id="{{organization.id}}"
+               id="{{organization.id}}_search_result_link"
                ng-click="$ctrl.select(organization)">
 
             <div class="content" ng-class="{last: $last}">
