Check editing status from EditableForm instead of relying on input fn
Fixes problem where isEditing function was passed from component
prototype and in that case this points to wrong place resulting
in error and never showing the change subject button.

--- a/src/app/components/editor/classForm.html
+++ b/src/app/components/editor/classForm.html
@@ -41,7 +41,7 @@
   </div>
 </div>
 
-<subject-view entity="$ctrl.class" model="$ctrl.model" is-editing="$ctrl.isEditing"></subject-view>
+<subject-view entity="$ctrl.class" model="$ctrl.model"></subject-view>
 
 <hr />
 
