Log translation parameters along with translation keys
Also update help.html based on logged data.

--- a/src/app/translations/help.html
+++ b/src/app/translations/help.html
@@ -1,163 +1,128 @@
-<div translate>Start help</div>
-<div translate>next</div>
-<div translate>previous</div>
-<div translate>close</div>
-<div translate>Class description info</div>
-<div translate>Diipadaa</div>
-<div translate>Select group</div>
+<div translate>Add class</div>
+<div translate>Add class description</div>
+<div translate>Add classification</div>
+<div translate>Add classification info</div>
+<div translate>Add contributor</div>
+<div translate>Add contributor info</div>
+<div translate>Add library</div>
+<div translate>Add library description</div>
+<div translate>Add model</div>
+<div translate>Add model description</div>
+<div translate>Add new property</div>
+<div translate>Add new property description</div>
+<div translate>Add profile</div>
+<div translate>Add profile description</div>
+<div translate>Add property</div>
+<div translate>Add reference to namespace</div>
+<div translate>Add reference to namespace description</div>
+<div translate>Add vocabulary</div>
+<div translate>Add vocabulary description</div>
+<div translate>Association is here</div>
+<div translate>Association label</div>
+<div translate>Association label info</div>
+<div translate>Association target can be changed from the list or by typing the identifier</div>
+<div translate>Association target is here</div>
+<div translate>Association target must be selected from list of existing classes</div>
+<div translate>Attribute is here</div>
+<div translate>Attribute is here info</div>
+<div translate>Attribute label</div>
+<div translate>Attribute label info</div>
+<div translate>Changes need to be saved</div>
+<div translate>Class is here</div>
+<div translate>Class is here info</div>
+<div translate>Classes can be modified</div>
+<div translate>Classes can be seen visually here</div>
+<div translate>Classifications are here</div>
+<div translate>Concept is here</div>
+<div translate>Concept is here info</div>
+<div translate>Concept label</div>
+<div translate>Concept label info</div>
+<div translate>Confirm selection</div>
 <div translate>Confirm selection info</div>
-<div translate>Group is a categorization of interoperability descriptions to different fields and domains</div>
+<div translate>Congratulations for completing adding an association!</div>
+<div translate>Congratulations for completing adding an attribute!</div>
+<div translate>Congratulations for completing class assignation!</div>
+<div translate>Congratulations for completing library creation!</div>
+<div translate>Congratulations for completing library creation! description</div>
+<div translate>Congratulations for completing namespace require!</div>
+<div translate>Congratulations for completing new class creation!</div>
+<div translate>Congratulations for completing profile creation!</div>
+<div translate>Congratulations for completing profile creation! description</div>
+<div translate>Congratulations for completing specialize class!</div>
+<div translate>Contributors are here</div>
+<div translate>Definition</div>
+<div translate>Description</div>
+<div translate>Description info</div>
+<div translate>Guide through adding an association</div>
+<div translate>Guide through adding an attribute</div>
+<div translate>Guide through assigning class to a library</div>
+<div translate>Guide through creating a class</div>
 <div translate>Guide through creating new library</div>
 <div translate>Guide through creating new library description</div>
 <div translate>Guide through creating new profile</div>
 <div translate>Guide through creating new profile description</div>
 <div translate>Guide through requiring a namespace</div>
 <div translate>Guide through specializing a class</div>
-<div translate>Guide through assigning class to a library</div>
-<div translate>Guide through creating a class</div>
-<div translate>Guide through adding an attribute</div>
-<div translate>Guide through adding an association</div>
-<div translate>Select help topic</div>
-<div translate>Congratulations for completing library creation!</div>
-<div translate>Congratulations for completing profile creation!</div>
-<div translate>Congratulations for completing library creation! description</div>
-<div translate>Congratulations for completing profile creation! description</div>
-<div translate>Congratulations for completing namespace require!</div>
-<div translate>Congratulations for completing specialize class!</div>
-<div translate>Congratulations for completing class assignation!</div>
-<div translate>Congratulations for completing new class creation!</div>
-<div translate>Congratulations for completing adding an attribute!</div>
-<div translate>Congratulations for completing adding an association!</div>
+<div translate>Imported namespaces are here</div>
+<div translate>Imported namespaces can be used to link resources to existing standards</div>
+<div translate>Library label</div>
+<div translate>Library label info</div>
+<div translate>Model languages</div>
+<div translate>Model languages info</div>
+<div translate>Modify class</div>
+<div translate>Modify library</div>
+<div translate>Modify library description</div>
+<div translate>Modify profile</div>
+<div translate>Modify profile description</div>
 <div translate>Open library details</div>
 <div translate>Open library details description</div>
 <div translate>Open profile details</div>
 <div translate>Open profile details description</div>
-<div translate>Modify library</div>
-<div translate>Modify profile</div>
-<div translate>Modify class</div>
-<div translate>Modify library description</div>
-<div translate>Modify profile description</div>
-<div translate>Modify class description</div>
-<div translate>Add reference to namespace</div>
-<div translate>Add reference to namespace description</div>
-<div translate>Add profile description</div>
-<div translate>Add library description</div>
-<div translate>Add class description</div>
-<div translate>Search for jhs</div>
-<div translate>Search for palvelu</div>
-<div translate>Search for tuote class</div>
-<div translate>Search for tuote concept</div>
-<div translate>Search for nimi</div>
-<div translate>Search for tuotetaan</div>
-<div translate>Search for tuotetaan concept</div>
-<div translate>Search for henkilö</div>
-<div translate>Search for henkilö info</div>
-<div translate>Search for yhteystiedot</div>
-<div translate>Search for yhteystiedot info</div>
-<div translate>Search for osoite</div>
-<div translate>Search for osoite info</div>
-<div translate>Search for vene class</div>
-<div translate>Search for vene class info</div>
-<div translate>Search for vene concept</div>
-<div translate>Search for vene concept info</div>
-<div translate>Search for liikenneväline</div>
-<div translate>Search for liikenneväline info</div>
-<div translate>Select jhs</div>
-<div translate>Select palvelu</div>
-<div translate>Select nimi</div>
-<div translate>Select tuote</div>
-<div translate>Select henkilö</div>
-<div translate>Select henkilö info</div>
-<div translate>Select yhteystiedot</div>
-<div translate>Select yhteystiedot info</div>
-<div translate>Select osoite</div>
-<div translate>Select osoite info</div>
-<div translate>Select liikenneväline</div>
-<div translate>Select liikenneväline info</div>
-<div translate>Select name and description</div>
-<div translate>Select registration number and vehicle code</div>
-<div translate>Select registration number and vehicle code info</div>
-<div translate>Select new creation</div>
-<div translate>Select new attribute creation</div>
-<div translate>Select new association creation</div>
-<div translate>Select concept suggest creation</div>
-<div translate>Select association target</div>
-<div translate>Select super class</div>
-
-<div translate>Search for jhs info</div>
-<div translate>Search for palvelu info</div>
-<div translate>Search for tuote class info</div>
-<div translate>Search for tuote concept info</div>
-<div translate>Search for nimi info</div>
-<div translate>Search for tuotetaan info</div>
-<div translate>Search for tuotetaan concept info</div>
-<div translate>Search for tuotetaan predicate</div>
-<div translate>Search for tuotetaan predicate info</div>
-<div translate>Search for omistaja</div>
-<div translate>Search for omistaja info</div>
-<div translate>Search for omistaja predicate</div>
-<div translate>Search for omistaja predicate info</div>
-<div translate>Search for matkustajien lukumäärä</div>
-<div translate>Search for matkustajien lukumäärä info</div>
-<div translate>Search for matkustajien lukumäärä concept</div>
-<div translate>Search for matkustajien lukumäärä concept info</div>
-<div translate>Select omistaja</div>
-<div translate>Select omistaja info</div>
-<div translate>Select jhs info</div>
-<div translate>Select palvelu info</div>
-<div translate>Select nimi info</div>
-<div translate>Select tuote info</div>
-<div translate>Select tuote info</div>
-<div translate>Select name and description info</div>
-<div translate>Select new creation info</div>
-<div translate>Select new attribute creation info</div>
-<div translate>Select new association creation info</div>
-<div translate>Select concept suggest creation info</div>
-<div translate>Select association target info</div>
-
-<div translate>Help is open</div>
-<div translate>Are you sure that you want to close help?</div>
-<div translate>Confirm selection</div>
-<div translate>Imported namespaces are here</div>
-<div translate>Class is here</div>
-<div translate>Class is here info</div>
-<div translate>Attribute is here</div>
-<div translate>Attribute is here info</div>
-<div translate>Association is here</div>
-<div translate>Association is here info</div>
-<div translate>Association target is here</div>
-<div translate>Super class is here</div>
-<div translate>Concept is here</div>
-<div translate>Concept is here info</div>
+<div translate>Prefix</div>
+<div translate>Prefix info</div>
+<div translate>Profile label</div>
+<div translate>Profile label info</div>
 <div translate>Property is here</div>
 <div translate>Property is here info</div>
-<div translate>Label can be changed</div>
-<div translate>Classes can be seen visually here</div>
-<div translate>Palvelu</div>
-<div translate>Testikirjasto</div>
-<div translate>Palveluprofiili</div>
-<div translate>Tuote</div>
-<div translate>Asia joka tuotetaan</div>
-<div translate>Nimi</div>
-<div translate>Tuotetaan</div>
-<div translate>Tuotetaan palvelussa</div>
-<div translate>tapahtumaketju joka toteuttaa jotain</div>
-<div translate>jhs</div>
-<div translate>Classes can be modified</div>
-<div translate>Changes need to be saved</div>
-<div translate>Imported namespaces can be used to link resources to existing standards</div>
+<div translate>Save changes</div>
+<div translate>Search for</div> {{name}}
+<div translate>Search for class</div> {{name}}
+<div translate>Search for class info</div> {{name}}
+<div translate>Search for concept</div> {{name}}
+<div translate>Search for concept info</div> {{name}}
+<div translate>Search for info</div> {{name}}
+<div translate>Search for predicate</div> {{name}}
+<div translate>Search for predicate info</div> {{name}}
+<div translate>Select association target</div>
+<div translate>Select class</div> {{name}}
+<div translate>Select class description</div> {{name}}
+<div translate>Select concept suggest creation</div>
+<div translate>Select concept suggest creation info</div>
+<div translate>Select name and description</div>
+<div translate>Select name and description info</div>
+<div translate>Select new association creation</div>
+<div translate>Select new association creation info</div>
+<div translate>Select new attribute creation</div>
+<div translate>Select new attribute creation info</div>
+<div translate>Select new creation</div>
+<div translate>Select new creation info</div>
+<div translate>Select registration number and vehicle code</div>
+<div translate>Select registration number and vehicle code info</div>
+<div translate>Select search result</div> {{name}}
+<div translate>Select search result info</div> {{name}}
+<div translate>Select super class</div>
 <div translate>Select the vocabulary that is missing the required concept</div>
 <div translate>Suggest definition or description for the concept</div>
-<div translate>Create new info</div>
-<div translate>Association target must be selected from list of existing classes</div>
-<div translate>Association target can be changed from the list or by typing the identifier</div>
-<div translate>Super class must be selected from list of existing classes</div>
 <div translate>Super class can be changed from the list or by typing the identifier</div>
-<div translate>You can add new attribute or association to the Class from here</div>
-
-<div translate>This tutorial shows how to import new namespace to the model</div>
-<div translate>This tutorial shows how to create a new shape from a class</div>
+<div translate>Super class is here</div>
+<div translate>Super class must be selected from list of existing classes</div>
 <div translate>This tutorial shows how to add Class from existing library</div>
+<div translate>This tutorial shows how to add association to a Class</div>
 <div translate>This tutorial shows how to add new attribute</div>
 <div translate>This tutorial shows how to create a new Class</div>
-<div translate>This tutorial shows how to add association to a Class</div>
+<div translate>This tutorial shows how to create a new shape from a class</div>
+<div translate>This tutorial shows how to import new namespace to the model</div>
+<div translate>Vocabularies are here</div>
+<div translate>Vocabularies can be used to link resources to existing concepts</div>
+<div translate>Vocabulary</div>
+<div translate>You can add new attribute or association to the Class from here</div>
