--- a/src/app/components/model/addEditLinkModal.html
+++ b/src/app/components/model/addEditLinkModal.html
@@ -2,28 +2,28 @@
 
   <div class="modal-header">
     <h4 class="modal-title">
-      <a><i ng-click="$dismiss('cancel')" class="fas fa-times"></i></a>
+      <a><i id="cancel_link_modal_button" ng-click="$dismiss('cancel')" class="fas fa-times"></i></a>
       {{$ctrl.titleLabel | translate}}
     </h4>
   </div>
 
   <div class="modal-body">
     <editable data-title="Homepage" context="$ctrl.model">
-      <input class="form-control" type="text" uri-input="free-url" model="$ctrl.model" autofocus required ng-model="$ctrl.homepage" />
+      <input id="add_link_url_input" class="form-control" type="text" uri-input="free-url" model="$ctrl.model" autofocus required ng-model="$ctrl.homepage" />
     </editable>
 
     <editable data-title="Title" context="$ctrl.model">
-      <input class="form-control" type="text" required string-input="label" ng-model="$ctrl.title"/>
+      <input id="add_link_title_input" class="form-control" type="text" required string-input="label" ng-model="$ctrl.title"/>
     </editable>
 
     <editable data-title="Description" context="$ctrl.model">
-      <textarea class="form-control" string-input ng-model="$ctrl.description"></textarea>
+      <textarea id="add_link_description_textarea" class="form-control" string-input ng-model="$ctrl.description"></textarea>
     </editable>
   </div>
 
   <div class="modal-footer">
-    <button class="btn btn-action confirm" type="button" ng-click="$ctrl.create()" ng-disabled="!addModelForm.$valid">{{$ctrl.confirmLabel | translate}}</button>
-    <button class="btn btn-link cancel" type="button" ng-click="$ctrl.cancel()" translate>Cancel</button>
+    <button id="create_link_button" class="btn btn-action confirm" type="button" ng-click="$ctrl.create()" ng-disabled="!addModelForm.$valid">{{$ctrl.confirmLabel | translate}}</button>
+    <button id="cancel_create_link_button" class="btn btn-link cancel" type="button" ng-click="$ctrl.cancel()" translate>Cancel</button>
   </div>
 
 </form>
