--- a/src/app/components/editor/classView.html
+++ b/src/app/components/editor/classView.html
@@ -10,7 +10,7 @@
 
         content
         <selection-content>
-          <class-form id="$ctrl.id" class="$ctrl.editableInEdit" old-class="$ctrl.class" model="$ctrl.model" open-property-id="$ctrl.openPropertyId"></class-form>
+          <class-form id="{{$ctrl.id}}" class="$ctrl.editableInEdit" old-class="$ctrl.class" model="$ctrl.model" open-property-id="$ctrl.openPropertyId"></class-form>
         </selection-content>
       </selection-view>
     </div>
