--- a/src/app/components/editor/editableConstraint.html
+++ b/src/app/components/editor/editableConstraint.html
@@ -1,5 +1,5 @@
 <accordion open-id="$ctrl.open">
-  <accordion-group id="$ctrl.id + '_constraint'" identifier="'default'">
+  <accordion-group id="{{$ctrl.id + '_constraint'}}" identifier="'default'">
 
     <accordion-heading>
       <h5>
