--- a/src/app/components/editor/predicateView.html
+++ b/src/app/components/editor/predicateView.html
@@ -9,7 +9,7 @@
         </selection-buttons>
 
         <selection-content>
-          <predicate-form id="$ctrl.id" predicate="$ctrl.editableInEdit" old-predicate="$ctrl.predicate" model="$ctrl.model"></predicate-form>
+          <predicate-form id="{{$ctrl.id}}" predicate="$ctrl.editableInEdit" old-predicate="$ctrl.predicate" model="$ctrl.model"></predicate-form>
         </selection-content>
       </selection-view>
     </div>
