--- a/src/app/components/editor/predicateForm.html
+++ b/src/app/components/editor/predicateForm.html
@@ -80,7 +80,7 @@
 
   <div class="row">
     <div class="col-md-12">
-      <usage-panel id="$ctrl.id + '_' + $ctrl.predicate.id.uri" entity="$ctrl.predicate" context="$ctrl.model"></usage-panel>
+      <usage-panel id="{{$ctrl.id + '_' + $ctrl.predicate.id.uri}}" entity="$ctrl.predicate" context="$ctrl.model"></usage-panel>
     </div>
   </div>
 
