--- a/src/app/components/editor/searchClassModal.html
+++ b/src/app/components/editor/searchClassModal.html
@@ -78,7 +78,7 @@
       </div>
 
       <div class="col-6 search-selection">
-        <class-form id="'search_class'" ng-if="!$ctrl.isSelectionExternalEntity() && $ctrl.selection" class="$ctrl.selection" old-class="$ctrl.selection" model="$ctrl.model" open-property-id="openPropertyId"></class-form>
+        <class-form id="search_class" ng-if="!$ctrl.isSelectionExternalEntity() && $ctrl.selection" class="$ctrl.selection" old-class="$ctrl.selection" model="$ctrl.model" open-property-id="openPropertyId"></class-form>
 
         <div ng-if="$ctrl.isSelectionExternalEntity()">
 
