--- a/src/app/components/editor/searchPredicateModal.html
+++ b/src/app/components/editor/searchPredicateModal.html
@@ -85,7 +85,7 @@
       </div>
 
       <div class="col-6 search-selection editable-form">
-        <predicate-form id="'search_predicate'" ng-if="$ctrl.isSelectionPredicate()" predicate="$ctrl.selection" old-predicate="$ctrl.selection" model="$ctrl.model"></predicate-form>
+        <predicate-form id="search_predicate" ng-if="$ctrl.isSelectionPredicate()" predicate="$ctrl.selection" old-predicate="$ctrl.selection" model="$ctrl.model"></predicate-form>
 
         <div ng-if="$ctrl.isSelectionExternalEntity()">
           <editable data-title="External URI" context="$ctrl.model" autofocus>
