YTI-712 Generate and add ID to change concept button in subject view

--- a/src/app/components/editor/propertyView.html
+++ b/src/app/components/editor/propertyView.html
@@ -186,7 +186,7 @@
       </accordion-heading>
 
       <accordion-body>
-        <property-predicate-view ng-if="isOpen()" property="$ctrl.property" model="$ctrl.model"></property-predicate-view>
+        <property-predicate-view id="'property_predicate'" ng-if="isOpen()" property="$ctrl.property" model="$ctrl.model"></property-predicate-view>
       </accordion-body>
 
     </accordion-group>
