--- a/src/app/components/editor/predicateForm.html
+++ b/src/app/components/editor/predicateForm.html
@@ -53,7 +53,7 @@
 </div>
 
 
-<subject-view entity="$ctrl.predicate" model="$ctrl.model"></subject-view>
+<subject-view id="{{$ctrl.id + '_subject'}}" entity="$ctrl.predicate" model="$ctrl.model"></subject-view>
 
 <hr />
 
