--- a/src/app/components/editor/propertyPredicateView.html
+++ b/src/app/components/editor/propertyPredicateView.html
@@ -27,7 +27,7 @@
     </div>
   </div>
 
-  <subject-view entity="$ctrl.predicate" model="$ctrl.model"></subject-view>
+  <subject-view id="{{$ctrl.id + '_subject'}}" entity="$ctrl.predicate" model="$ctrl.model"></subject-view>
 
 </div>
 
