YTI-712 Generate and add IDs to button with options

--- a/src/app/components/editor/classForm.html
+++ b/src/app/components/editor/classForm.html
@@ -57,7 +57,8 @@
          ng-model="$ctrl.sortAlphabetically">
         <i class="fas fa-sort-alpha-down"></i>
       </a>
-      <button-with-options ng-show="$ctrl.isEditing()"
+      <button-with-options id="{{$ctrl.id + '_options_button_add_property'}}"
+                           ng-show="$ctrl.isEditing()"
                            class="add-property"
                            options="$ctrl.addPropertyActions">
         <span translate>Add property</span>
